Fix Java compatibility issues - replace Java 21+ List methods with Java 17 compatible alternatives
Co-authored-by: commjoen <1457214+commjoen@users.noreply.github.com>